css/main.css
a {
    cursor: pointer;
    color: inherit;
    font-weight: bold;
}

a:hover {
    text-decoration: none;
    color: inherit;
    opacity: 0.75;
}

a:hover #header{
    opacity: 0.9;
}

header {
    font-size: 120%;
    margin-bottom: 15px;
}

#header {
    padding-top: 60px;
    background-image: url(../app-icons/ios/Icon-72@2x.png);
    background-position: left bottom;
    background-repeat: no-repeat;
    padding-left: 190px;
    padding-bottom: 15px;
    margin-bottom: 23px;
}

#header h1 {
    font-size: 49.5px;
}

#header .lead {
    margin-bottom: 0;
    font-size: 27px;
}

.container {
    max-width: 800px;
}

.navbar {
    margin-left: -5px;
    margin-right: -5px;
}

.navbar .navbar-inner {
    min-height: 50px;
    padding-top: 10px;
}

ul#seafood-collection li .seafood {
    line-height: 250%;
    font-size: 130%;
    padding-left: 20px;
    font-weight: normal;

}

ul#seafood-collection li .seafood i {
   vertical-align: baseline;
   opacity: 0.25;
   margin-right: 10px;
}

#seafood-spinner {
    display: block;
    margin: auto;
    margin-top: 30px;
    margin-bottom: 20px;
}

ul#seafood-collection .info {
    border: 1px solid #ddd;
    padding: 20px 40px;
    display: none;
}

ul#seafood-collection .info i {
    vertical-align: super;
    opacity: 0.8;
    margin-left: -5px;
}

ul#seafood-collection .info a.more-info:hover i {
    opacity: 0.75;
}

ul#seafood-collection .info .badges img {
    height: 70px;
}

.red {
    color: #b94a48;
}

.orange {
    color: #cc6600;
}

.green {
    color: #468847;
}

@media (max-width: 767px) {

    header.page-header {
        margin-bottom: 0;
    }

    #header {
        padding-top: 160px;
        padding-left: 0;
        background-position: top center;
        text-align: center;
        border: none;
    }

    #header .lead {
        font-size: 1em;
    }

    #app {
        margin-left: -22px;
        margin-right: -22px;
    }

    #seafood-collection .info {
        padding-left: 20px;
        padding-right: 20px;
    }
}

